--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="your-verification-code" />
+    <meta name="google-site-verification" content="google1dce65c739e4ed73.html" />
     <title>My First Website</title>
 </head>
 <body>
