--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="google1dce65c739e4ed73.html" />
+    <meta name="google-site-verification" content="0fPPaTfGCiNpMRcYqwnFsKuLo01uXc2M98xxqYpQ-u8" />
     <title>My First Website</title>
 </head>
 <body>
