--- a/index.html
+++ b/index.html
@@ -1,14 +1,71 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="google1dce65c739e4ed73.html" />
+    <meta name="description" content="A vibrant professional website prototype">
+     <meta name="google-site-verification" content="google1dce65c739e4ed73.html" />
     <meta name="google-site-verification" content="0fPPaTfGCiNpMRcYqwnFsKuLo01uXc2M98xxqYpQ-u8" />
-    <title>My First Website</title>
+    
+    <title>Professional Web Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple web page.</p>
+    <header>
+        <div class="container">
+            <h1>My Creative Agency</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="home" class="hero">
+        <div class="container">
+            <h2>Welcome to Creativity</h2>
+            <p>We innovate, create, and deliver outstanding solutions for your business.</p>
+            <a href="#contact" class="btn">Let’s Work Together</a>
+        </div>
+    </section>
+
+    <section id="about" class="about">
+        <div class="container">
+            <h2>About Us</h2>
+            <p>We are a team of creative professionals passionate about delivering exceptional results that elevate brands and businesses to the next level.</p>
+        </div>
+    </section>
+
+    <section id="services" class="services">
+        <div class="container">
+            <h2>Our Services</h2>
+            <div class="service-list">
+                <div class="service-item">
+                    <h3>Web Design</h3>
+                    <p>Creating stunning, responsive websites tailored to your brand.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Digital Marketing</h3>
+                    <p>Strategies to grow your online presence and engage your audience.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Graphic Design</h3>
+                    <p>Eye-catching designs that leave a lasting impression.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 My Creative Agency. All rights reserved.</p>
+            <p><a href="#home">Back to top</a></p>
+        </div>
+    </footer>
 </body>
 </html>
