--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="mailto:karishmadudekula88@gmail.com">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,7 +30,7 @@
         <div class="container">
             <h2>Welcome to Creativity</h2>
             <p>We innovate, create, and deliver outstanding solutions for your business.</p>
-            <a href="#contact" class="btn">Let’s Work Together</a>
+            <a href="mailto:karishmadudekula88@gmail.com" class="btn">Let’s Work Together</a>
         </div>
     </section>
 
